--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                </div>
                <a class="web" href="#contact">Bana Ulaş <i class="fad fa-angle-right"></i>
                </a>
-               <a href="https://www.linkedin.com/in/cem-baysal-876b10309/" target="_blank">Beraber çalışmak istiyorum! <i class="fad fa-angle-right"></i>
+               <a href="https://drive.google.com/file/d/1g2lUKVZExlNLGAU2tanCAlWx6jDgM5dy/view?usp=sharing" target="_blank">  CV <i class="fad fa-angle-right"></i>
                </a>
             </div>
          </div>
@@ -101,7 +101,7 @@
                   <div class="text">Ben Cem  <span class="break">  </span>
                      </span>
                   </div>
-                  <p>Merhaba ben Cem. İzmir Ekonomi Üniversitesi 2.Sınıf Bilgisayar programcılığı öğrencisiyim. </p>
+                  <p>Merhaba ben Cem. 2004 yılında İzmirde doğdum. Hayatım boyunca teknoloji ve sporla iç içe oldum. İzmir Ekonomi Üniversitesine Bilgisayar Programcılığı bölümüne 2022 yılında başladım. Şu anda 2. Sınıf öğrencisiyim, bölümüm bittikten sonra 4 yıllık yazılım mühendisliği bölümüne geçip ERP sistemleri ve SAP yazılımı üstünde kendimi geliştirmek istiyorum. </p>
                   </a>
                </div>
             </div>
@@ -115,7 +115,7 @@
             <div class="skills-content">
                <div class="column left">
                   <div class="text">Yetenek ve deneyimlerim</div>
-                  <p>Öğrenme tutkusuna sahip bir Yazılım geliştiricisiyim ve müşterilerimin istekleri yönünde çalışmalar yapabilirim. Yüksek motivasyonlu, sonuç odaklı, kendi kendine hareket eden, çalışkan, hızlı öğrenen biriyim ve sürekli olarak becerilerimi geliştirmeye açığım. JavaScript ve React Js, Parcel js, Node js, Redux, HTML5, CSS3, Git, SASS, Tailwind CSS, Bootstrap, REST API, JSON, Axios, Adobe Photoshop hakkında biraz bilgi sahibiyim. Günümüz teknolojisinde kullanılan (çerçeveler ve araçlar).</p>
+                  <p>Öğrenme tutkusuna sahip bir Yazılım geliştiricisiyim ve müşterilerimin istekleri yönünde çalışmalar yapabilirim. Yüksek motivasyonlu, sonuç odaklı, kendi kendine hareket eden, çalışkan, hızlı öğrenen biriyim ve sürekli olarak becerilerimi geliştirmeye açığım. JavaScript ve React Js, Parcel js, Node js, Redux, HTML5, CSS3, Git, SASS, Tailwind CSS, Bootstrap, REST API, JSON, Axios, Adobe Photoshop hakkında temel bilgi sahibiyim. Günümüz teknolojisinde kullanılan (çerçeveler ve araçlar).</p>
                   <a href="#projects">Daha fazlası <i class="fas fa-angle-double-right"></i>
                   </a>
                </div>
@@ -169,7 +169,7 @@
       <!-- Project section start -->
       <section class="projects" id="projects">
          <div class="max-width">
-            <h2 class="title fadein">Projeler</h2>
+            <a href="https://github.com/c3mb21?tab=repositories" target="_blank"><h2 class="title fadein"  >Projeler</h2></a>
             <div class="carousel owl-carousel">
                <div class="card">
                   <a href="https://foodfire-app.netlify.app/" target="_blank">
